--- a/style.css
+++ b/style.css
@@ -1,14 +1,40 @@
 body{
     font-family: 'Redressed', cursive;
+    margin: 0;
 }
 h1{
     font-size: 50px;
+}
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgray;
+}
+section{
+    height: 500px;
+    padding-bottom: 150px;
+}
+.bg-center{
+    text-align: center;
 }
 .name-highlight{
     color: aqua;
 }
 .sec-name-highlight{
     color: coral;
+}
+.th-name-highlight{
+    color:indianred;
+}
+.fou-name-highlight{
+    color:lightsalmon;
+}
+.fif-name-highlight{
+    color:lightskyblue;
+}
+.six-name-highlight{
+    color:mediumturquoise;
 }
 .half-width{
     width: 40%;
@@ -19,4 +45,20 @@ h1{
 .half-width img{
     width: 100%;
 
+}
+.low-width{
+    float: left;
+    width: 32%;
+    padding: 3px;
+}
+.low-width img{
+    height: 300px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: radial-gradient(circle, #5c0067 0%, #00d4ff 100%);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 400;
 }
